--- a/MultipleCollectionView/UIViewController/Main/MainViewController.xib
+++ b/MultipleCollectionView/UIViewController/Main/MainViewController.xib
@@ -1,22 +1,59 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="MultipleCollectionView" customModuleProvider="target">
             <connections>
+                <outlet property="stackView" destination="yqv-aa-7x4" id="zaY-fl-iCR"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xQt-to-1ug">
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="yqv-aa-7x4">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="RQX-Po-yHE">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="250" id="po3-D0-3Ru"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="yqv-aa-7x4" firstAttribute="top" secondItem="xQt-to-1ug" secondAttribute="top" id="VQ5-As-HPA"/>
+                        <constraint firstItem="yqv-aa-7x4" firstAttribute="centerX" secondItem="xQt-to-1ug" secondAttribute="centerX" id="bv4-hH-B9b"/>
+                        <constraint firstAttribute="bottom" secondItem="yqv-aa-7x4" secondAttribute="bottom" id="tcD-9Q-CMa"/>
+                        <constraint firstAttribute="trailing" secondItem="yqv-aa-7x4" secondAttribute="trailing" id="xoP-RN-QCe"/>
+                        <constraint firstItem="yqv-aa-7x4" firstAttribute="leading" secondItem="xQt-to-1ug" secondAttribute="leading" id="yyj-Ld-aIl"/>
+                    </constraints>
+                </scrollView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="xQt-to-1ug" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="CLQ-ME-TLH"/>
+                <constraint firstAttribute="bottom" secondItem="xQt-to-1ug" secondAttribute="bottom" id="aQy-x9-Xet"/>
+                <constraint firstItem="xQt-to-1ug" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="dfe-gu-76u"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xQt-to-1ug" secondAttribute="trailing" id="uGX-Qn-w9a"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="132" y="131"/>
         </view>
     </objects>
+    <resources>
+        <image name="header" width="448" height="269.5"/>
+    </resources>
 </document>
