:lipstick: Update background color

--- a/MultipleCollectionView/UIViewController/Collection/CollectionViewController.xib
+++ b/MultipleCollectionView/UIViewController/Collection/CollectionViewController.xib
@@ -21,7 +21,7 @@
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="b81-06-vkh">
                     <rect key="frame" x="0.0" y="44" width="414" height="100"/>
-                    <color key="backgroundColor" red="0.97254901960784312" green="0.55686274509803924" blue="0.55686274509803924" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="X0I-vk-G0m"/>
                     </constraints>
